refactor(basic-3.8): separate css selectors by new line

--- a/style.css
+++ b/style.css
@@ -49,11 +49,13 @@ ul {
   padding: 0px;
 }
 
-li, h2 {
+li,
+h2 {
   list-style: none;
 }
 
-input, button{
+input,
+button {
   outline: none;
 }
 
