--- a/style.css
+++ b/style.css
@@ -5,6 +5,47 @@ body {
   font-family: Lato, sans-serif;
 }
 
+ul {
+  margin: 0;
+  padding: 0px;
+}
+
+li,
+h2 {
+  list-style: none;
+}
+
+h2 {
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+input,
+button {
+  outline: none;
+}
+
+button {
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
+}
+
+button:hover {
+  color: #3a3A3a;
+}
+
+/* Header */
+
 .header {
   width: 500px;
   margin: 0 auto;
@@ -12,11 +53,11 @@ body {
   text-align: right;
 }
 
-.header img {
+.header__img {
   width: 100%;
 }
 
-.header .more-info {
+.header__info-link {
   font-family: fantasy, cursive;
 }
 
@@ -40,49 +81,15 @@ body {
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+/* Section add-task */
+
+.add-task__wrapper {
   display: flex;
+  padding-top: 20px;
 }
 
-ul {
-  margin: 0;
-  padding: 0px;
-}
-
-li,
-h2 {
-  list-style: none;
-}
-
-input,
-button {
-  outline: none;
-}
-
-button {
-  background: none;
-  border: 0px;
-  color: #888;
-  font-size: 15px;
-  width: 60px;
-  font-family: Lato, sans-serif;
-  cursor: pointer;
-}
-
-button:hover {
-  color: #3a3A3a;
-}
-
-/* Heading */
-h2,
-label[for='new-task'] {
-  color: #333;
-  font-weight: 700;
-  font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
-  margin: 0;
-  text-transform: uppercase;
+.add-task__input {
+  width: 318px;
 }
 
 input[type="text"] {
@@ -100,16 +107,6 @@ input[type="text"] {
 
 input[type="text"]:focus {
   color: #333;
-}
-
-/* New Task */
-label[for='new-task'] {
-  display: block;
-  margin: 0 0 20px;
-}
-
-input#new-task {
-  width: 318px;
 }
 
 /* Task list */
